--- a/compose.yaml
+++ b/compose.yaml
@@ -15,6 +15,8 @@ services:
       context: .
     environment:
       - NODE_ENV=development
+      - API_BASE_URL=${API_BASE_URL}
+      - PLAYLIST_ID=${PLAYLIST_ID}
     command: npm run dev
     working_dir: /app
     ports:
