Added the Contact Us page and also implemented the connection with email.js

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,11 @@
-PLAYLIST_ID=
-API_BASE_URL=
+# Public playlist for the home video background
+PLAYLIST_ID=your_youtube_playlist_id
+
+# Backend API base URL
+API_BASE_URL=https://api.example.com/api/
+
+# EmailJS (client-side) — values must match your EmailJS dashboard
+NEXT_PUBLIC_EMAILJS_SERVICE_ID=service_xxxxxxx
+NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=template_xxxxxxx
+NEXT_PUBLIC_EMAILJS_PUBLIC_KEY=xxxxxxxxxxxxxxxxxxxxxx
+
