Pushed non pushed changes (Header)

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,22 @@
-# Public playlist for the home video background
-PLAYLIST_ID=your_youtube_playlist_id
+# IFFA frontend example environment variables
 
-# Backend API base URL
-API_BASE_URL=https://api.example.com/api/
+# Public site URL (optional, used for metadata/canonicals)
+# NEXT_PUBLIC_SITE_URL=https://iffa.com.au
 
-# EmailJS (client-side) — values must match your EmailJS dashboard
-NEXT_PUBLIC_EMAILJS_SERVICE_ID=service_xxxxxxx
-NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=template_xxxxxxx
-NEXT_PUBLIC_EMAILJS_PUBLIC_KEY=xxxxxxxxxxxxxxxxxxxxxx
+# API base
+API_BASE_URL=https://api.iffa.com.au/api/
+
+# YouTube playlist for homepage videos (optional)
+# PLAYLIST_ID=PLnYoY3EKzq0qe7TlzgkfjKNGPAgGoSfev
+
+# EmailJS (client-side)
+NEXT_PUBLIC_EMAILJS_SERVICE_ID=your_service_id
+# Default template for generic contact forms
+NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=your_default_template_id
+NEXT_PUBLIC_EMAILJS_PUBLIC_KEY=your_public_key
+
+# Optional: other templates for specific forms (set in code or read from env)
+# NEXT_PUBLIC_EMAILJS_TEMPLATE_PARTNER=template_partner
+# NEXT_PUBLIC_EMAILJS_TEMPLATE_VOLUNTEER=template_volunteer
+# NEXT_PUBLIC_EMAILJS_TEMPLATE_PRESS=template_press
 
